--- a/style.css
+++ b/style.css
@@ -5,50 +5,62 @@ html, body, #mapDiv {
   }
   
 #footer{
-position: relative;
-margin-top: -150px; 
-height: 150px;
-clear:both;
+    position: relative;
+    margin-top: -150px;
+    height: 150px;
+    clear:both;
 }
 
-
-overflow:hidden;display:none;z-index:100;word-wrap:break-word}
-.multiTip a{color:#FFF}
 #header{
-height:115px;
-background:#444;
-color:#fff;
-margin:0;
-overflow:hidden;
-display:none
+    height:60px;
+    background:#444;
+    color:#fff;
+    margin:0;
+    overflow:hidden;
+    display:none
+}
+
+#header .textArea .title {
+    position: relative;
+    font-family: open_sanssemibold,sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 5px;
+    padding-left: 10px;
 }
 
 .rightArea{
-position:absolute;
-right:0;
-top:0;
-padding-top:25px;
-padding-right:25px;
-text-align:right
+    position:absolute;
+    right:0;
+    top:0;
+    padding-top:10px;
+    padding-right:25px;
+    text-align:right
 }
+
 .rightArea .logo{
-position:relative;
-height:60px;
-border:0;
-outline:0
+    position:relative;
+    height:60px;
+    border:0;
+    outline:0
 } 
-@-moz-document url-prefix(){.rightArea .logo a{position:relative;display:inline-block
+@-moz-document url-prefix(){
+    .rightArea .logo a{
+        position:relative;display:inline-block
 	}
-.rightArea .logo a img{
-	bottom:initial;
-	top:initial;
-	margin-top:-10px}}
+    .rightArea .logo a img{
+        bottom:initial;
+        top:initial;
+        margin-top:-10px
+    }
+}
+
 .rightArea .logo img{
-	position:absolute;
-	top:50%;
-	bottom:50%;
-	right:0;
-	max-width:250px;
-	max-height:50px;
-	margin:auto 0
-	}
+    position:absolute;
+    top:50%;
+    bottom:50%;
+    right:0;
+    max-width:250px;
+    max-height:30px;
+    margin:auto 0
+}
