--- a/style.css
+++ b/style.css
@@ -3,17 +3,9 @@ html, body, #mapDiv {
     margin: 0;
     height: 100%;
   }
-  
-#footer{
-    position: relative;
-    margin-top: -150px;
-    height: 150px;
-    clear:both;
-}
 
 #header{
     height:60px;
-    background:#444;
     color:#fff;
     margin:0;
     overflow:hidden;
@@ -70,4 +62,58 @@ html, body, #mapDiv {
     max-width:250px;
     max-height:30px;
     margin:auto 0
+}
+
+#footer{
+    position: relative;
+    margin-top: -150px;
+    height: 150px;
+    clear:both;
+}
+
+.esriPopup {
+    position: absolute;
+    z-index: 40;
+    font-family: open_sanssemibold,sans-serif;
+    font-size: 12px;
+    border-radius: 5px;
+}
+
+.esriPopup .esriPopupWrapper {
+    box-shadow: 0px 0px 0.75em #777;
+}
+
+.esriPopup .sizer {
+    position: relative;
+    width: 270px;
+    z-index: 1;
+}
+
+.esriPopup .titlePane {
+    background-color:#3B5786;
+    color: #fff;
+    line-height: 20px;
+    padding-left: 6px;
+    cursor: default;
+}
+
+.esriPopup .contentPane {
+    position: relative;
+    max-height: 300px;
+    overflow: auto;
+    padding: 10px 6px 6px 10px;
+    background-color: #F7F7F7;
+    color: #000;
+}
+
+.esriPopup .actionsPane {
+    padding: 2px 10px 4px;
+    background-color: #F7F7F7;
+    position: relative;
+}
+
+.esriPopup a {
+    background-color: #F7F7F7;
+    color: #3B5786;
+    text-decoration: underline;
 }
