--- a/style.css
+++ b/style.css
@@ -4,13 +4,30 @@ html, body, #mapDiv {
     height: 100%;
   }
   
-#footer{
-position: relative;
-margin-top: -150px; 
-height: 150px;
-clear:both;
+
+.rightPane{
+	position: absolute;
+	right: 0;
+	top: 100px;
+	padding-top: 25px;
+	padding-right: 25px;
+	text-align: right;
+	border-color: white;
+}
+.rightPane .legend{
+	position: relative;
+	height: 60px;
+	border: 0;
+	outline: 0;
 }
 
+fieldset{
+	border-color: #FFFFFF;
+	border-style: solid;
+	border-width: 5px;
+	opacity: 1;
+	background-color: #FFFFFF;
+}
 
 overflow:hidden;display:none;z-index:100;word-wrap:break-word}
 .multiTip a{color:#FFF}
@@ -20,35 +37,37 @@ background:#444;
 color:#fff;
 margin:0;
 overflow:hidden;
-display:none
+display:none;
 }
-
 .rightArea{
 position:absolute;
 right:0;
 top:0;
 padding-top:25px;
 padding-right:25px;
-text-align:right
+text-align:right;
 }
 .rightArea .logo{
 position:relative;
 height:60px;
 border:0;
-outline:0
+outline:0;
 } 
-@-moz-document url-prefix(){.rightArea .logo a{position:relative;display:inline-block
-	}
+@-moz-document url-prefix(){.rightArea .logo a{
+	position:relative;
+	display:inline-block}
 .rightArea .logo a img{
-	bottom:initial;
-	top:initial;
-	margin-top:-10px}}
+bottom:initial;
+top:initial;
+margin-top:-10px;}}
+
 .rightArea .logo img{
-	position:absolute;
-	top:50%;
-	bottom:50%;
-	right:0;
-	max-width:250px;
-	max-height:50px;
-	margin:auto 0
-	}
+position:absolute;
+top:50%;
+bottom:50%;
+right:0;
+max-width:250px;
+max-height:50px;
+margin:auto 0;
+}
+
