--- a/style.css
+++ b/style.css
@@ -3,7 +3,120 @@ html, body, #mapDiv {
     margin: 0;
     height: 100%;
   }
-  
+
+#header{
+    height:60px;
+    color:#fff;
+    margin:0;
+    overflow:hidden;
+    display:none
+}
+
+#header .textArea .title {
+    position: relative;
+    font-family: open_sanssemibold,sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    padding-top: 5px;
+    padding-left: 10px;
+}
+
+#HomeButton {
+    position: absolute;
+    top: 150px;
+    left: 20px;
+    z-index: 50;
+}
+
+.rightArea{
+    position:absolute;
+    right:0;
+    top:0;
+    padding-top:10px;
+    padding-right:25px;
+    text-align:right
+}
+
+.rightArea .logo{
+    position:relative;
+    height:60px;
+    border:0;
+    outline:0
+} 
+@-moz-document url-prefix(){
+    .rightArea .logo a{
+        position:relative;display:inline-block
+	}
+    .rightArea .logo a img{
+        bottom:initial;
+        top:initial;
+        margin-top:-10px
+    }
+}
+
+.rightArea .logo img{
+    position:absolute;
+    top:50%;
+    bottom:50%;
+    right:0;
+    max-width:250px;
+    max-height:30px;
+    margin:auto 0
+}
+
+#footer{
+    position: relative;
+    margin-top: -150px;
+    height: 150px;
+    clear:both;
+}
+
+.esriPopup {
+    position: absolute;
+    z-index: 40;
+    font-family: open_sanssemibold,sans-serif;
+    font-size: 12px;
+    border-radius: 5px;
+}
+
+.esriPopup .esriPopupWrapper {
+    box-shadow: 0px 0px 0.75em #777;
+}
+
+.esriPopup .sizer {
+    position: relative;
+    width: 270px;
+    z-index: 1;
+}
+
+.esriPopup .titlePane {
+    background-color:#3B5786;
+    color: #fff;
+    line-height: 20px;
+    padding-left: 6px;
+    cursor: default;
+}
+
+.esriPopup .contentPane {
+    position: relative;
+    max-height: 300px;
+    overflow: auto;
+    padding: 10px 6px 6px 10px;
+    background-color: #F7F7F7;
+    color: #000;
+}
+
+.esriPopup .actionsPane {
+    padding: 2px 10px 4px;
+    background-color: #F7F7F7;
+    position: relative;
+}
+
+.esriPopup a {
+    background-color: #F7F7F7;
+    color: #3B5786;
+    text-decoration: underline;
+}
 
 .rightPane{
 	position: absolute;
@@ -28,46 +141,3 @@ fieldset{
 	opacity: 1;
 	background-color: #FFFFFF;
 }
-
-overflow:hidden;display:none;z-index:100;word-wrap:break-word}
-.multiTip a{color:#FFF}
-#header{
-height:115px;
-background:#444;
-color:#fff;
-margin:0;
-overflow:hidden;
-display:none;
-}
-.rightArea{
-position:absolute;
-right:0;
-top:0;
-padding-top:25px;
-padding-right:25px;
-text-align:right;
-}
-.rightArea .logo{
-position:relative;
-height:60px;
-border:0;
-outline:0;
-} 
-@-moz-document url-prefix(){.rightArea .logo a{
-	position:relative;
-	display:inline-block}
-.rightArea .logo a img{
-bottom:initial;
-top:initial;
-margin-top:-10px;}}
-
-.rightArea .logo img{
-position:absolute;
-top:50%;
-bottom:50%;
-right:0;
-max-width:250px;
-max-height:50px;
-margin:auto 0;
-}
-
