made legend checkbox and functionality
The whole team did this together.

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ html, body, #mapDiv {
 	top: 100px;
 	padding-top: 25px;
 	padding-right: 25px;
-	text-align: right;
+	text-align: left;
 	border-color: white;
 }
 .rightPane .legend{
