--- a/style.css
+++ b/style.css
@@ -64,11 +64,17 @@ html, body, #mapDiv {
     margin:auto 0
 }
 
-#footer{
+/*#footer {
     position: relative;
+    background-color: #3B5786;
     margin-top: -150px;
-    height: 150px;
+    height: 175px;
     clear:both;
+}*/
+
+.scroll {
+    max-width: 100%;
+    overflow: scroll;
 }
 
 .esriPopup {
