--- a/style.css
+++ b/style.css
@@ -64,12 +64,28 @@ html, body, #mapDiv {
     margin:auto 0
 }
 
-#footer{
-    position: relative;
-    margin-top: -150px;
-    height: 150px;
-    clear:both;
+#footer {
+
+    position:  relative;
+
+    margin-top:  -80px;
+
+    height:  150px;
+    color: #fff;
+    background-color:#3B5786;
+
+    clear: both;
+    z-index: 20;
+
 }
+.toggle{
+    text-align: center;
+}
+.opened{
+    margin-top: -150px !important;
+}
+
+
 
 .esriPopup {
     position: absolute;
