--- a/style.css
+++ b/style.css
@@ -65,15 +65,11 @@ html, body, #mapDiv {
 }
 
 #footer {
-
-    position:  relative;
-
-    margin-top:  -80px;
-
+    position: relative;
+    margin-top: -80px;
     height:  150px;
     color: #fff;
     background-color:#3B5786;
-
     clear: both;
     z-index: 20;
 
@@ -85,8 +81,6 @@ html, body, #mapDiv {
     margin-top: -150px !important;
 }
 
-
-
 .esriPopup {
     position: absolute;
     z-index: 40;
@@ -96,7 +90,7 @@ html, body, #mapDiv {
 }
 
 .esriPopup .esriPopupWrapper {
-    box-shadow: 0px 0px 0.75em #777;
+    box-shadow: 0 0.75em #777;
 }
 
 .esriPopup .sizer {
@@ -142,6 +136,7 @@ html, body, #mapDiv {
 	padding-right: 25px;
 	text-align: left;
 	border-color: white;
+    color: #fff;
 }
 .rightPane .legend{
 	position: relative;
@@ -150,10 +145,15 @@ html, body, #mapDiv {
 	outline: 0;
 }
 
+legend{
+    padding-top: 35px;
+    font-size: 25px;
+}
+
 fieldset{
-	border-color: #FFFFFF;
+	border-color: #3B5786;
 	border-style: solid;
 	border-width: 5px;
 	opacity: 1;
-	background-color: #FFFFFF;
+	background-color: #3B5786;
 }
