--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-html, body, #mapDiv {
+html, body, map, #mapDiv {
     padding: 0;
     margin: 0;
     height: 100%;
   }
+
 
 #header{
     height:60px;
@@ -64,10 +65,16 @@ html, body, #mapDiv {
     margin:auto 0
 }
 
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 #footer {
     position: relative;
-    margin-top: -80px;
-    height:  150px;
+    margin-top: 0px;
+    height: 20px;
     color: #fff;
     background-color:#3B5786;
     clear: both;
@@ -137,6 +144,7 @@ html, body, #mapDiv {
 	text-align: left;
 	border-color: white;
     color: #fff;
+    z-index: 50;
 }
 .rightPane .legend{
 	position: relative;
