--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ footer{
     color: #fff;
     background-color:#3B5786;
     clear: both;
+    transition-property: all;
+    transition: .7s;
     z-index: 20;
 
 
