changed arrow orientations, on timeline popup added in hand pointer for both images and arrow buttons, added start of basemap gallery

--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ html, body, map, #mapDiv {
 image{
 	cursor: pointer; cursor: hand;
 }
+i{
+	cursor:pointer; cursor: hand;
+}
 
 #HomeButton {
     position: absolute;
