I worked on a basic search bar. I will keep working on a search bar with customization that will allow us to zoom into the points on the map.

--- a/style.css
+++ b/style.css
@@ -215,3 +215,11 @@ fieldset{
     height: 500px;
     z-index: 9002;
 }
+
+#search {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    top: 80px;
+    left: 74px;
+}
