--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ fieldset{
 #grad1{
     position: absolute;
     top:-10px;
-    width:13%;
+    width:15%;
     height:inherit;
     z-index: 10;
     background: -webkit-linear-gradient(left, #3B5786 15%, rgba(0,0,0,0)); /* For Safari 5.1 to 6.0 */
@@ -287,11 +287,38 @@ fieldset{
     position: absolute;
     right: 0px;
     top:-10px;
-    width:13%;
+    width:15%;
     height:inherit;
     z-index: 10;
     background: -webkit-linear-gradient(left, rgba(0,0,0,0), #3B5786 85%); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(right, rgba(0,0,0,0), #3B5786 85%); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(right, rgba(0,0,0,0), #3B5786 85%); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to right, rgba(0,0,0,0) , #3B5786 85%); /* Standard syntax (must be last) */
+}
+
+#popup {
+    display: none;
+    height:380px;
+    width:340px;
+    margin: 0 auto;
+    position:relative;
+    z-index:10;
+    display:none;
+    background-color: #3B5786;
+}
+
+#translucent{
+    position:fixed;
+    top:0;
+    left:0;
+    background:rgba(255,255,255,0.7);
+    z-index:5;
+    width:100%;
+    height:100%;
+    display:none;
+}
+
+#popup:target, #popup:target + #translucent {
+    display:block;
+    opacity:2;
 }
