--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ footer{
 #slideLeft{
     position: absolute;
     top: 0px;
-    padding-left: 20px;
+    padding-left: 15px;
     padding-top: 50px;
     opacity: .5;
     z-index: 20;
@@ -134,7 +134,7 @@ footer{
     position: absolute;
     top: 0px;
     right:0px;
-    padding-right: 20px;
+    padding-right: 15px;
     padding-top: 50px;
     opacity: .5;
     z-index: 20;
@@ -256,6 +256,7 @@ fieldset{
     transition: width 1s;
     -webkit-transition: width 2s; /* Safari 3.1 to 6.0 */
 
+
 }
 
 .box:hover
@@ -268,32 +269,27 @@ fieldset{
     width: 100%;
     height: 80px;
     position: absolute;
-    left: 115px;
+    left: 60px;
     top:0px;
 }
 
 #grad1{
     position: absolute;
     top:-10px;
-    width:15%;
+    width:60px;
     height:inherit;
     z-index: 10;
-    background: -webkit-linear-gradient(left, #3B5786 15%, rgba(0,0,0,0)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(right, #3B5786 15%, rgba(0,0,0,0)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(right, #3B5786 15%, rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to right,#3B5786 15%, rgba(0,0,0,0)); /* Standard syntax (must be last) */
+    background-color: #3B5786;
 }
-#grad2{
+
+#grad2 {
     position: absolute;
     right: 0px;
-    top:-10px;
-    width:15%;
-    height:inherit;
+    top: -10px;
+    width: 60px;
+    height: inherit;
     z-index: 10;
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0), #3B5786 85%); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(right, rgba(0,0,0,0), #3B5786 85%); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(right, rgba(0,0,0,0), #3B5786 85%); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to right, rgba(0,0,0,0) , #3B5786 85%); /* Standard syntax (must be last) */
+    background-color: #3B5786;
 }
 
 #popup {
