--- a/style.css
+++ b/style.css
@@ -121,10 +121,11 @@ footer{
     height: inherit;
 }
 
+
 #slideLeft{
     position: absolute;
     top: 0px;
-    padding-left: 15px;
+    padding-left: 20px;
     padding-top: 50px;
     opacity: .5;
     z-index: 20;
@@ -134,7 +135,7 @@ footer{
     position: absolute;
     top: 0px;
     right:0px;
-    padding-right: 15px;
+    padding-right: 20px;
     padding-top: 50px;
     opacity: .5;
     z-index: 20;
@@ -256,7 +257,6 @@ fieldset{
     transition: width 1s;
     -webkit-transition: width 2s; /* Safari 3.1 to 6.0 */
 
-
 }
 
 .box:hover
@@ -264,32 +264,69 @@ fieldset{
     height: 90px;
     top:-5px;
 }
+#buttonContainer{
+    width: 300px;
+    height: 30px;
+    position: absolute;
+    top: 0px;
+    left; 0px;
+    z-index: 900;
+}
 
 #container{
     width: 100%;
     height: 80px;
-    position: absolute;
-    left: 60px;
-    top:0px;
+    position: relative;
+    left: 115px;
+    bottom: 0px;
+    background-color: pink;
 }
+
+#container2{
+    width: 100%;
+    height: 80px;
+    position: relative;
+    left: 0px;
+    bottom:0px;
+    background-color: yellow;
+    display: none;
+
+}
+
+#container3{
+    width: 100%;
+    height: 80px;
+    position: relative;
+    bottom: 0px;
+    background-color: greenyellow;
+    display: none;
+    
+    
+}
+
 
 #grad1{
     position: absolute;
     top:-10px;
-    width:60px;
+    width:15%;
     height:inherit;
     z-index: 10;
-    background-color: #3B5786;
+    background: -webkit-linear-gradient(left, #3B5786 15%, rgba(0,0,0,0)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, #3B5786 15%, rgba(0,0,0,0)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, #3B5786 15%, rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right,#3B5786 15%, rgba(0,0,0,0)); /* Standard syntax (must be last) */
 }
-
-#grad2 {
+#grad2{
     position: absolute;
     right: 0px;
-    top: -10px;
-    width: 60px;
-    height: inherit;
+    top:-10px;
+    width:15%;
+    height:inherit;
     z-index: 10;
-    background-color: #3B5786;
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0), #3B5786 85%); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, rgba(0,0,0,0), #3B5786 85%); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, rgba(0,0,0,0), #3B5786 85%); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, rgba(0,0,0,0) , #3B5786 85%); /* Standard syntax (must be last) */
 }
 
 #popup {
