--- a/style.css
+++ b/style.css
@@ -38,12 +38,10 @@ html, body, .map{
     padding-left: 10px;
 }
 
-image{
+image, i, .box, #slideRight, #slideLeft, input{
 	cursor: pointer; cursor: hand;
 }
-i{
-	cursor:pointer; cursor: hand;
-}
+
 
 #HomeButton {
     position: absolute;
@@ -109,7 +107,14 @@ footer{
 
 .toggle{
     text-align: center;
-}
+    background: -webkit-linear-gradient(#3B5786, #2f456a); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#3B5786,#2f456a); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#3B5786,#2f456a); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#3B5786, #2f456a); /* Standard syntax */
+    border-bottom: solid 1px;
+    border-bottom-color: #2f456a;
+   }
+
 .opened{
     margin-top: 150px !important;
     height: 20px !important;
@@ -272,39 +277,43 @@ fieldset{
     z-index: 900;
 }
 
-#container1{
-    width: 100%;
-    height: 120px;
-    position: absolute;
-    left: 60px;
-    top:0px;
-    background-color: red;
+.timeButton {
+    position: relative;
+    left: 0px;
+    background: #3B5786;
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-family: open_sanssemibold, serif;
+    color: #ffffff;
+    font-size: 12px;
+    padding: 0px 10px 0px 10px;
+    text-decoration: none;
+    border: solid;
+    border-width: thin;
+    border-color: cadetblue;
 }
 
-#container2{
-    width: 100%;
-    height: 120px;
-    position: absolute;
-    left: 60px;
-    top:0px;
-    background-color: green;
-
+.timeButton:hover {
+    border-color: #172133;
+    text-decoration: none;
 }
 
-#container3{
+.timecontainer{
     width: 100%;
     height: 120px;
     position: absolute;
     left: 60px;
-    top:0px;
-    background-color: yellow;
-
-
+    top:5px;
+    background-color: #3B5786;
 }
 
 #grad1{
     position: absolute;
-    top:-10px;
+    top:0px;
     width:60px;
     height:inherit;
     z-index: 10;
@@ -314,7 +323,7 @@ fieldset{
 #grad2 {
     position: absolute;
     right: 0px;
-    top: -10px;
+    top: 0px;
     width: 60px;
     height: inherit;
     z-index: 10;
