--- a/style.css
+++ b/style.css
@@ -211,34 +211,14 @@ footer{
 }
 
 legend{
-    padding-top: 35px;
+    padding-top: 45px;
     font-size: 25px;
 }
 
 fieldset{
-	border-color: #3B5786;
-	border-style: solid;
-	border-width: 5px;
-	opacity: 1;
-	background-color: #3B5786;
-}
-
-#blanket {
-    background-color: #000000;
-    opacity: 0.4;
-    position: absolute;
-    z-index: 9001;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-#popUp {
-    position: absolute;
-    background-color: #ffffff;
-    width: 500px;
-    height: 500px;
-    z-index: 9002;
+	border: 5px solid #3B5786;
+    border-radius: 10px;
+    background-color: #3B5786;
 }
 
 #search {
@@ -259,6 +239,7 @@ fieldset{
     height: 80px;
     padding: 15px;
     transition: width 1s;
+    border-radius: 10px;
     -webkit-transition: width 2s; /* Safari 3.1 to 6.0 */
 }
 
@@ -281,20 +262,18 @@ fieldset{
     position: relative;
     left: 0px;
     background: #3B5786;
-    -webkit-border-top-left-radius: 10px;
-    -webkit-border-top-right-radius: 10px;
-    -moz-border-radius-topleft: 10px;
-    -moz-border-radius-topright: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    -webkit-border-top-left-radius: 7px;
+    -webkit-border-top-right-radius: 7px;
+    -moz-border-radius-topleft: 7px;
+    -moz-border-radius-topright: 7px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
     font-family: open_sanssemibold, serif;
-    color: #ffffff;
-    font-size: 12px;
-    padding: 0px 10px 0px 10px;
+    color: #fff;
+    font-size: 11px;
+    padding: 0px 10px;
     text-decoration: none;
-    border: solid;
-    border-width: thin;
-    border-color: cadetblue;
+    border: solid thin cadetblue;
 }
 
 .timeButton:hover {
@@ -336,30 +315,24 @@ fieldset{
     width:340px;
     margin: 0 auto;
     position:fixed;
-    top: 20%;
+    top: 13%;
     left: 35%;
-    z-index:10;
+    z-index:50;
     display:block;
     background-color: #3B5786;
+    border-radius: 10px;
+    padding: 10px;
+    color: #fff;
 }
 
 #close{
-    height: 30px;
-    width: 30px;
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: 7px;
+    right: 7px;
 }
 
-#translucent{
-    position:fixed;
-    top:0;
-    left:0;
-    background:rgba(255,255,255,0.7);
-    z-index:5;
-    width:100%;
-    height:100%;
-    display:none;
+#close:hover{
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
 #popup:target, #popup:target + #translucent {
