changed the header so only the logo is clickable

--- a/style.css
+++ b/style.css
@@ -34,10 +34,10 @@ html, body, .map{
     display:none
 }
 
-#header .textArea .title {
-    text-align: center;
-    position: relative;
-    padding-top: 5px;
+div .textArea{
+    width: 331px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #ruskin_logo {
