--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ html, body, .map{
 
 #header{
     height:60px;
-    background: -webkit-linear-gradient(#3B5786, #172133); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#3B5786,#172133); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#3B5786,#172133); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#3B5786, #172133); /* Standard syntax */
+    background: -webkit-linear-gradient(#3B5786 65%, #172133); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#3B5786 65%,#172133); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#3B5786 65%,#172133); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#3B5786 65%, #172133); /* Standard syntax */
     margin:0;
     overflow:hidden;
     display:none
@@ -41,6 +41,8 @@ div .textArea{
 }
 
 #ruskin_logo {
+    position: relative;
+    top: 5px;
     height: 45px;
     width: auto;
 }
@@ -89,11 +91,11 @@ footer{
 
 .toggle{
     text-align: center;
-    background: -webkit-linear-gradient(#3B5786, #172133); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#3B5786,#172133); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#3B5786,#172133); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#3B5786, #172133); /* Standard syntax */
-    border-bottom: solid 1px;
+    background: -webkit-linear-gradient(#172133 40%, #3B5786); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#172133 40%, #3B5786); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#172133 40%, #3B5786); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#172133 40%, #3B5786); /* Standard syntax */
+    border-bottom: solid 2px;
     border-bottom-color: #2f456a;
    }
 
@@ -187,32 +189,27 @@ footer{
 
 .rightPane{
 	position: absolute;
-	right: 0;
+	right: 50px;
 	top: 100px;
-	padding-top: 25px;
-	padding-right: 25px;
-	text-align: left;
+	background-color: #3B5786;
 	border-color: white;
     color: #fff;
     z-index: 50;
-}
-.rightPane .legend{
-	position: relative;
-	height: 60px;
-	border: 0;
-	outline: 0;
+    width: 200px;
+    height: 110px;
+    border: outset 2px #172133;
+    border-radius: 5px;
+
 }
 
 legend{
-    padding-top: 45px;
     font-size: 25px;
+    position: relative;
+    top: 5px;
 }
 
 fieldset{
-	border: 5px solid #3B5786;
-    border-radius: 5px;
-    background-color: #3B5786;
-
+    border: none;
 }
 
 #s{
@@ -237,7 +234,7 @@ fieldset{
     display: inline-flex;
     position: relative;
     top:5px;
-    margin-right: 10px;
+    margin-right: 7px;
     background-color: #172133;
     opacity: 0.9;
     width: 0px;
@@ -245,6 +242,8 @@ fieldset{
     padding: 15px;
     transition: opacity .3s, height .3s;
     border-radius: 5px;
+    border: outset;
+    border-width: 1px;
     -webkit-transition: opacity .3s, height .3s; /* Safari 3.1 to 6.0 */
 }
 
@@ -253,6 +252,20 @@ fieldset{
     opacity: 1;
     height: 87px;
     top:0px;
+    border-color: #172133;
+}
+
+#container1 .box p{
+    display: table-row-group;
+    font-size: 22px;
+}
+#container2 .box p{
+    display: table-row-group;
+    font-size: 13px;
+}
+#container3 .box p{
+    display: table-row-group;
+    font-size: 15px;
 }
 
 #buttonContainer{
@@ -279,7 +292,8 @@ fieldset{
     font-size: 11px;
     padding: 0px 10px;
     text-decoration: none;
-    border: solid thin cadetblue;
+    border: outset thin;
+    border-bottom: solid 2px;
 }
 
 .timeButton:hover {
