--- a/style.css
+++ b/style.css
@@ -191,10 +191,7 @@ footer{
 	position: absolute;
 	right: 0px;
 	top: 100px;
-    background: -webkit-linear-gradient(#3B5786 50%, #172133); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#3B5786 50%,#172133); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#3B5786 50%,#172133); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#3B5786 50%, #172133); /* Standard syntax */
+    background-color: #3B5786;
     color: #fff;
     z-index: 50;
     width: 200px;
@@ -299,6 +296,9 @@ fieldset{
 
 .timeButton:hover {
     text-decoration: none;
+    border:2px solid #3B5786 !important;
+    background-image:none !important;
+    background-color:#172133 !important
 }
 
 .timecontainer{
