--- a/style.css
+++ b/style.css
@@ -6,23 +6,6 @@ html, body, .map{
     height: 100%;
   }
 
-/*#info {
-    top: 80px;
-    color: #fff;
-    height: auto;
-    font-family: arial;
-    font-weight: bold;
-    left: 69px;
-    margin: 5px;
-    padding: 10px;
-    position: absolute;
-    width: 260px;
-    z-index: 40;
-    border: solid 1px #003300;
-    border-radius: 4px;
-    background-color: #3B5786;
-}*/
-
 #header{
     height:60px;
     background-color: #172133;
@@ -40,6 +23,7 @@ div .textArea{
     margin-top: 2px;
     margin-left: auto;
     margin-right: auto;
+    border: none;
 }
 
 #ruskin_logo {
@@ -141,14 +125,6 @@ footer{
     font-family: open_sanssemibold,sans-serif;
     font-size: 12px;
     border-radius: 5px;
-
-
-}
-
-.esriPopup .esriPopupWrapper {
-    box-shadow: 0 0.75em #777;
-    anchor:top;
-
 }
 
 .esriPopup .sizer {
@@ -263,6 +239,10 @@ fieldset{
 #container3 .box p{
     display: table-row-group;
     font-size: 14px;
+}
+
+#popup p{
+    display:table-row-group;
 }
 
 #buttonContainer{
